tweaks for tutorial

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -17,7 +17,7 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="utf-8"/>
-  <title>React Registration Demo</title>
+  <title>Symfony 3 + React Registration Example</title>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 </head>
